--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,11 @@ a {
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .button {
+    @apply px-4 py-2 border rounded-full cursor-pointer hover:shadow-lg active:scale-95 active:bg-gray-100 transition duration-150 ease-out transform;
+  }
+}
 
 * {
   box-sizing: border-box;
